# keyfile-cli

./: LICENSE  README.md  meson.build
.github/workflows/: ci.yml
src/: keyfile.c  meson.build
tests/: meson.build  sample.ini
